remove irrelevant content

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-torch==2.0.1
-transformers==4.36.2
+torch==2.1.0
+transformers==4.40.0
 accelerate==0.21.0
 fschat==0.2.31
 gradio==3.50.2
@@ -7,4 +7,6 @@ openai==0.28.0
 anthropic==0.5.0
 sentencepiece==0.1.99
 protobuf==3.19.0
-wandb
+wandb==0.16.3
+datasets==2.17.0
+pydantic
